kubernetes/apps/food-site/server/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: food-site-server
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - food.nu-sync.net
  rules:
    - backendRefs:
        - name: food-site-server
          port: 8000
